[metadata]
name = muse-as-service
version = 1.1.1
author = Dani El-Ayyass
author_email = dayyass@yandex.ru
description = REST API for sentence tokenization and embedding using Multilingual Universal Sentence Encoder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dayyass/muse-as-service
project_urls =
    Bug Tracker = https://github.com/dayyass/muse-as-service/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
python_requires = >=3.7
